canvas trail animations

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
     <title>World Map Simple: Azimuthal Equidistant Projection</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet" />
 </head>
 <body>
     <div id="app">
+        <div id="baseMap"></div>
+        <canvas id="particleCanvas"></canvas>
         <div class="controls-container">
             <div class="title">Planet Earth</div>
             <div class="slider-container">
